tests/fixtures/invalid/bytes_le_str.py
# Cannot compare with <= Bytes and Str
x: bool = b"hello" <= "hello"
